--- a/Footer.html
+++ b/Footer.html
@@ -28,7 +28,10 @@
     <form>
         <table>
             <tr>
-                <td><input type="text" placeholder="請填寫e-mail"></input></td>
+                <td>
+                    <input type="text" placeholder="請填寫e-mail"></input>
+                    <span class="alertBox">此 e-mail 信箱已填寫過！</span>
+                </td>
                 <td class="subscribe"><input type="button"></input></td>
             </tr>
         </table>
@@ -36,8 +39,8 @@
   </div>
 <script>
     $("#footer>ol>li.subscribeBn").click(function(){
-        $("#mailBox").animate({
-            bottom:40
+        $("#mailBox").stop().animate({
+            bottom:0
         }).mouseleave(function(){
             $(this).animate({bottom:-260})
         });
