--- a/part.html
+++ b/part.html
@@ -10,12 +10,10 @@
 
 
 
-
 	<style>
 	.waterfall {
 		max-width: 1232px;
 		min-width: 924px;
-		background-color: pink;
 		overflow: hidden;
 		position: relative;
 	}
@@ -29,6 +27,23 @@
 		margin-bottom:20px;
 		background-color: white;
 		padding:4px;
+	}
+
+	.waterfall>div>a>img {
+		display: block;
+	}
+
+	.navibar {
+		background-image: url(http://photo.lamo3.com.tw/eshop/common/crumbs-home.png);
+		background-repeat: no-repeat;
+		height: 13px;
+		padding-left: 20px;
+		font-size: 12px;
+		margin-bottom: 16px;
+	}
+
+	.sortbar {
+		padding-bottom: 18px;
 	}
 	</style>
 
@@ -66,58 +81,58 @@
 
 
 
+	
 
+	<div class="navibar">
+		dfjsdfije
+	</div>
+
+	<div class="sortbar">
+		sort by
+	</div>
 
 	<div class="waterfall">
 		<div>
-			<img src="http://img1.fzpp.com/img/201403/30/12-11-46-73-1.jpg">
+			<a href="#link">
+				<img src="http://img1.fzpp.com/img/201403/30/12-11-46-73-1.jpg">
+			</a>
 		</div>
 		<div>
-			<img src="http://img03.taobaocdn.com/bao/uploaded/i3/16869023183050967/T1olqCXBXXXXXXXXXX_!!0-item_pic.jpg">
+			<a href="#link">
+				<img src="http://img03.taobaocdn.com/bao/uploaded/i3/16869023183050967/T1olqCXBXXXXXXXXXX_!!0-item_pic.jpg">
+			</a>
 		</div>
 		<div>
-			<img src="https://s.yimg.com/aw/api/res/1.2/PHOEEnp98PnT51YuPPBnhg--/YXBwaWQ9eXR3YXVjdGlvbnNlcnZpY2U7aD00MDA7cT04NTtzcj0xLjI7c3M9MS4yO3c9Mjgw/http://nevec-img.zenfs.com/prod/tw_ec05-7/821a3d4d-798b-494e-abea-be1a6b34eea7.jpg">
+			<a href="#link">
+				<img src="https://s.yimg.com/aw/api/res/1.2/PHOEEnp98PnT51YuPPBnhg--/YXBwaWQ9eXR3YXVjdGlvbnNlcnZpY2U7aD00MDA7cT04NTtzcj0xLjI7c3M9MS4yO3c9Mjgw/http://nevec-img.zenfs.com/prod/tw_ec05-7/821a3d4d-798b-494e-abea-be1a6b34eea7.jpg">
+			</a>
 		</div>
 		<div>
-			<img src="http://61.67.232.229/ArDocCDN/AR00/AR009758/Content/AR009758-EP1600/11172-b.jpg">
+			<a href="#link">
+				<img src="http://61.67.232.229/ArDocCDN/AR00/AR009758/Content/AR009758-EP1600/11172-b.jpg">
+			</a>
 		</div>
 		<div>
-			<img src="http://img1.nz86.com/upload/picture/customer/77/11/3/37395144784474495.jpg">
+			<a href="#link">
+				<img src="http://img1.nz86.com/upload/picture/customer/77/11/3/37395144784474495.jpg">
+			</a>
 		</div>
 		<div>
-			<img src="http://www.qng.com.tw/data/item/1414478828_m">
+			<a href="#link">
+				<img src="http://www.qng.com.tw/data/item/1414478828_m">
+			</a>
 		</div>
 		<div>
-			<img src="http://mypaper.pchome.com.tw/show/article/026955/A1327140640">
+			<a href="#link">
+				<img src="http://mypaper.pchome.com.tw/show/article/026955/A1327140640">
+			</a>
 		</div>
 		<div>
-			<img src="http://2.bp.blogspot.com/-4q4T6n6Nrks/U5IIrURC-jI/AAAAAAAAJk0/FpFXgR_H6dA/s280-c/2014-06-07_023001.png">
+			<a href="#link">
+				<img src="http://2.bp.blogspot.com/-4q4T6n6Nrks/U5IIrURC-jI/AAAAAAAAJk0/FpFXgR_H6dA/s280-c/2014-06-07_023001.png">
+			</a>
 		</div>
-		<div>
-			<img src="http://img1.fzpp.com/img/201403/30/12-11-46-73-1.jpg">
-		</div>
-		<div>
-			<img src="http://img03.taobaocdn.com/bao/uploaded/i3/16869023183050967/T1olqCXBXXXXXXXXXX_!!0-item_pic.jpg">
-		</div>
-		<div>
-			<img src="https://s.yimg.com/aw/api/res/1.2/PHOEEnp98PnT51YuPPBnhg--/YXBwaWQ9eXR3YXVjdGlvbnNlcnZpY2U7aD00MDA7cT04NTtzcj0xLjI7c3M9MS4yO3c9Mjgw/http://nevec-img.zenfs.com/prod/tw_ec05-7/821a3d4d-798b-494e-abea-be1a6b34eea7.jpg">
-		</div>
-		<div>
-			<img src="http://61.67.232.229/ArDocCDN/AR00/AR009758/Content/AR009758-EP1600/11172-b.jpg">
-		</div>
-		<div>
-			<img src="http://img1.nz86.com/upload/picture/customer/77/11/3/37395144784474495.jpg">
-		</div>
-		<div>
-			<img src="http://www.qng.com.tw/data/item/1414478828_m">
-		</div>
-		<div>
-			<img src="http://mypaper.pchome.com.tw/show/article/026955/A1327140640">
-		</div>
-		<div>
-			<img src="http://2.bp.blogspot.com/-4q4T6n6Nrks/U5IIrURC-jI/AAAAAAAAJk0/FpFXgR_H6dA/s280-c/2014-06-07_023001.png">
-		</div>			
-						
+	
 	</div>
 
 
