--- a/header.html
+++ b/header.html
@@ -65,62 +65,7 @@
                             height: 25px;
                             float: left;
                         }
-
-                        .header > .box > .control > .left > .newin
-                        {
-                            background-image: url(http://photo.lamo3.com.tw/eshop/common/nav-new-in.png);
-                            width: 92px;
-                        }
-
-                            .header > .box > .control > .left > .newin:hover
-                            {
-                                background-image: url(http://photo.lamo3.com.tw/eshop/common/nav-new-in-hover.png);
-                            }
-
-                        .header > .box > .control > .left > .beautifulthings
-                        {
-                            background-image: url(http://photo.lamo3.com.tw/eshop/common/nav-beautiful-things.png);
-                            width: 150px;
-                        }
-
-                            .header > .box > .control > .left > .beautifulthings:hover
-                            {
-                                background-image: url(http://photo.lamo3.com.tw/eshop/common/nav-beautiful-things-hover.png);
-                            }
-
-                        .header > .box > .control > .left > .lookbook
-                        {
-                            background-image: url(http://photo.lamo3.com.tw/eshop/common/nav-lookbook.png);
-                            width: 124px;
-                        }
-
-                            .header > .box > .control > .left > .lookbook:hover
-                            {
-                                background-image: url(http://photo.lamo3.com.tw/eshop/common/nav-lookbook-hover.png);
-                            }
-
-                        .header > .box > .control > .left > .onsale
-                        {
-                            background-image: url(http://photo.lamo3.com.tw/eshop/common/nav-on-sale.png);
-                            width: 105px;
-                        }
-
-                            .header > .box > .control > .left > .onsale:hover
-                            {
-                                background-image: url(http://photo.lamo3.com.tw/eshop/common/nav-on-sale-hover.png);
-                            }
-
-                        .header > .box > .control > .left > .event
-                        {
-                            background-image: url(http://photo.lamo3.com.tw/eshop/common/nav-event.png);
-                            width: 90px;
-                        }
-
-                            .header > .box > .control > .left > .event:hover
-                            {
-                                background-image: url(http://photo.lamo3.com.tw/eshop/common/nav-event-hover.png);
-                            }
-
+                      
                     .header > .box > .control > .right
                     {
                         margin-right: 45px;
@@ -397,26 +342,8 @@
                     {
                         overflow: hidden;
                         margin: 0 auto;
-                        padding: 65px 0;
-                        background-color:pink;
                         height: 430px;
                     }
-            /*
-                        .header > .customerservicebox > div > .outbox > div
-                        {
-                            width: 298px;
-                            height: 298px;
-                            border: 1px solid;
-                            float: left;
-                            background-color: white;
-                            margin-right: 60px;
-                        }
-
-                        .header > .customerservicebox > div > .outbox > .end
-                        {
-                            margin-right: 0;
-                        }
-                        */
 
             .header > .eventbox
             {
@@ -443,7 +370,6 @@
                 {
                     width: 160px;
                     height: 590px;
-                    background-color: pink;
                     margin-top: -378px;
                     margin-left: 49px;
                 }
@@ -454,7 +380,78 @@
 
 
     <script>
+		String.prototype.splitLast = function (separator) {
+		    var si = this.split(separator);
+		    var sb = "";
+		    var max = si.length;
+		    for (var i = 0; i < max; i++) {
+		        if (i < max - 1) {
+		            sb += si[i];
+		            if (i < max - 2) {
+		                sb += separator;
+		            }
+		        }
+		    }
+		    var output = [];
+		    if (sb != "") {
+		        output.push(sb);
+		    }
+		    output.push(si[max - 1]);
+		    return output;
+		};
         $(function () {
+        	var isTest = true;
+        	(function () {
+				var data = [
+					{Idno: 5,Name: "newin",MouseoverName: "",PhotoPath: "http://photo.lamo3.com.tw/eshop/common/nav-new-in.png",MainPhoto: "",ShowType: 0,OrderNum: 1,V1: ""},
+					{Idno: 6,Name: "beautifulthings",MouseoverName: "",PhotoPath: "http://photo.lamo3.com.tw/eshop/common/nav-beautiful-things.png",MainPhoto: "",ShowType: 0,OrderNum: 1,V1: ""},
+					{Idno: 7,Name: "lookbook",MouseoverName: "",PhotoPath: "http://photo.lamo3.com.tw/eshop/common/nav-lookbook.png",MainPhoto: "",ShowType: 0,OrderNum: 1,V1: ""},
+					{Idno: 8,Name: "onsale",MouseoverName: "",PhotoPath: "http://photo.lamo3.com.tw/eshop/common/nav-on-sale.png",MainPhoto: "",ShowType: 0,OrderNum: 1,V1: ""},
+					{Idno: 9,Name: "event",MouseoverName: "",PhotoPath: "http://photo.lamo3.com.tw/eshop/common/nav-event.png",MainPhoto: "",ShowType: 2,OrderNum: 1,V1: "http://www.google.com.tw/"}
+				];
+				function getdata(data) {
+					if (data !== null) {
+						var html="";
+						for(var i=0,max=data.length;i<max;i++) {
+							html += "<a href=\"";
+							switch(data[i].ShowType) {
+								case 0:
+									html += "../Shop/itemlist.aspx?m=" + data[i].Idno;
+									break;
+								case 2:
+								case 3:
+									html += data[i].V1;
+									break;
+							}
+							html += "\"><img src=\"" + data[i].PhotoPath + "\"></a>";
+						}
+						$(".header>.box>.control>.left").html(html).on("mouseenter mouseleave","img",function() {
+							var $this = $(this);
+				            var src = $this.attr("src");
+				            var srcSplitLast;
+				            if (src.indexOf("-hover.") < 0) {
+				                srcSplitLast = src.splitLast(".");
+				                var url = srcSplitLast[0] + "-hover." + srcSplitLast[1];
+				                var img = new Image();
+				                img.src = url;
+				                img.onload = function () {
+				                    $this.attr("src", url);
+				                };
+				            } else {
+				                srcSplitLast = src.splitLast("-hover.");
+				                $this.attr("src", srcSplitLast[0] + "." + srcSplitLast[1]);
+				            }
+						});
+					}
+				}
+				if (isTest) {
+					getdata(data);
+				} else {
+					$.getJSON("../common/ajax/menucmd.ashx",function(data){
+						getdata(data);
+					});
+				}
+        	})(); //menu
             (function () {
                 $(".header>.box>.control>.right>.nav>.search").click(function () {
                     $(".header>.searchbox").animate({ show: "show", height: 220 });
@@ -493,6 +490,37 @@
                         }, 500));
                     }
                 });
+                var cartlist=[{MerNo: "S01450641015",MerNo1: "01450641015",MerName: "帽內撞呢料雙蓋袋風衣外套",Color: "杏色",Size: "S",Price: 1495,Num: 1,PhotoSmPath: "http://s3.hicloud.net.tw/fifty/men/0145064101539/0145064101539.jpg",ColorPhotoPath: "http://s3.hicloud.net.tw/fifty/men/0145064101539/color.jpg"}];
+                function getdata(cartlist) {
+					var count = 0;
+			        var sum = 0;
+			        var html = "";
+			        try {
+			            if (cartlist[0].MerName) {
+			                for (var i = 0; i < cartlist.length; i++) {
+								html += "<tr>"
+                                html += "<td>" + cartlist[i].MerName + "</td>"
+                                html += "<td><img src=\"" + cartlist[i].ColorPhotoPath + "\" width=\"11\" /></td>"
+                                html += "<td>" + cartlist[i].Size + "</td>"
+                                html += "<td>" + cartlist[i].Price + "</td>"
+                                html += "<td class=\"end\">" + cartlist[i].Num + "</td>"
+                                html += "</tr>"
+			                    count += cartlist[i].Num;
+			                    sum += cartlist[i].Num * cartlist[i].Price;
+			                }
+			            }
+			        } catch (err) {
+			        }
+			        $(".header>.box>.control>.right>.bagbox>div>.list>table>tbody").html(html);
+			        $(".count").text(count);                	
+                }
+                if (isTest) {
+                	getdata(cartlist);
+                } else {
+                	$.getJSON("../Common/CartList.ashx", function (cartlist) {
+			        	getdata(cartlist);
+			    	});                
+                }
             })(); //bag
             (function () {
                 $(".header>.box>.control>.right>.upnav>.customerservice").click(function () {
@@ -501,6 +529,7 @@
                 $(".header>.customerservicebox>div>.close").click(function () {
                     $(".header>.customerservicebox").animate({ hide: "hide", height: 0 });
                 });
+                $(".header>.customerservicebox>div>.outbox").html("測試內容");
             })(); //customerservice
             (function () {
                 $(".header>.eventbox>div>.eventbutton").click(function () {
@@ -510,6 +539,7 @@
                     } else {
                         $(".header>.eventbox").animate({ "right": -190 });
                     }
+                    $(".header>.eventbox>div>.eventcontent").html("測試內容");
                 });
             })(); //event
         });
@@ -522,13 +552,7 @@
     <div class="header">
         <div class="box">
             <div class="control">
-                <div class="left">
-                    <a href="#newin" class="newin">&nbsp;</a>
-                    <a href="#beautifulthings" class="beautifulthings">&nbsp;</a>
-                    <a href="#lookbook" class="lookbook">&nbsp;</a>
-                    <a href="#onsale" class="onsale">&nbsp;</a>
-                    <a href="#event" class="event">&nbsp;</a>
-                </div>
+                <div class="left">&nbsp;</div>
                 <div class="right">
                     <div class="upnav">
                         <a href="#customerservice" class="customerservice">&nbsp;</a>
@@ -612,21 +636,13 @@
         <div class="customerservicebox">
             <div>
                 <div class="close">&nbsp;</div>
-                <div class="outbox">
-                    <!--
-                    <div>&nbsp;</div>
-                    <div>&nbsp;</div>
-                    <div>&nbsp;</div>
-                    <div class="end">&nbsp;</div>
-                    -->
-                </div>
+                <div class="outbox">&nbsp;</div>
             </div>
         </div>
         <div class="eventbox">
             <div>
                 <div class="eventbutton">&nbsp;</div>
-                <div class="eventcontent">
-                </div>
+                <div class="eventcontent">&nbsp;</div>
             </div>
         </div>
     </div>
