--- a/header.html
+++ b/header.html
@@ -25,7 +25,7 @@
         {
             position: fixed;
             width: 100%;
-
+			z-index: 1;
         }
 
             .header a
@@ -400,7 +400,7 @@
 		    return output;
 		};
         $(function () {
-        	var isTest = true;
+        	var isTest = false;
         	(function () {
 				var data = [
 					{Idno: 5,Name: "newin",MouseoverName: "",PhotoPath: "http://photo.lamo3.com.tw/eshop/common/nav-new-in.png",MainPhoto: "",ShowType: 0,OrderNum: 1,V1: ""},
